public static class PlayerAnimationParams
{
    public const string idleAnimTrigger = "Idle";
    public const string runAnimTrigger = "Run";
    public const string pushAnimTrigger = "Push";
    public const string sittingClapAnimTrigger = "SittingClap";
    public const string standingClapAnimTrigger = "StandingClap";
    public const string jumpOnBallAnimTrigger = "JumpOnBall";
    public const string fallTrigger = "Fall";
    public const string tripTrigger = "Trip";
}
